--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ xing_username: jekyll
 pinterest_username: jekyll
 youtube_username: jekyll
 orcid_username: 0000-0000-0000-0000
+in_username: sth
 googlescholar_username: D847cGsAAAAJ
 additional_links:
   - title: Link name
