--- a/_test/_config-version-2.yml
+++ b/_test/_config-version-2.yml
@@ -21,6 +21,7 @@ darkmode: never
 # Social links
 twitter_username: jekyllrb
 github_username:  jekyll
+in_username:  jekyll
 stackoverflow_username: "00000001"
 dribbble_username: jekyll
 facebook_username: jekyll
