--- a/_test/_config-version-1.yml
+++ b/_test/_config-version-1.yml
@@ -11,6 +11,7 @@ website: sproogen.github.io/modern-resume-theme
 
 # Social links
 twitter_username: jekyllrb
+X_username: jekyllrb
 github_username:  jekyll
 in_username:  jekyll
 stackoverflow_username: "00000001"
