--- a/_test/_config-version-2.yml
+++ b/_test/_config-version-2.yml
@@ -20,6 +20,7 @@ darkmode: never
 
 # Social links
 twitter_username: jekyllrb
+X_username: jekyllrb
 github_username:  jekyll
 in_username:  jekyll
 stackoverflow_username: "00000001"
