--- a/_test/_config-version-2.yml
+++ b/_test/_config-version-2.yml
@@ -23,6 +23,7 @@ twitter_username: jekyllrb
 X_username: jekyllrb
 github_username:  jekyll
 in_username:  jekyll
+medium_username:  jekyll
 stackoverflow_username: "00000001"
 dribbble_username: jekyll
 facebook_username: jekyll
