--- a/_test/_config-version-1.yml
+++ b/_test/_config-version-1.yml
@@ -10,6 +10,7 @@ phone: 07845248563
 website: sproogen.github.io/modern-resume-theme
 
 # Social links
+gate_username: jekyll
 twitter_username: jekyllrb
 X_username: jekyllrb
 github_username:  jekyll
