--- a/_test/_config-version-1.yml
+++ b/_test/_config-version-1.yml
@@ -18,6 +18,7 @@ affiliation: jekyll
 knowsAbout: jekyll
 
 # Social links
+wos_username: jekyll
 gate_username: jekyll
 twitter_username: jekyllrb
 X_username: jekyllrb
