--- a/_test/_config-version-2.yml
+++ b/_test/_config-version-2.yml
@@ -27,6 +27,7 @@ knowsAbout: jekyll
 darkmode: never
 
 # Social links
+wos_username: jekyll
 gate_username: jekyll
 twitter_username: jekyllrb
 X_username: jekyllrb
