--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ darkmode: false
 twitter_username: jekyllrb
 github_username: jekyll
 stackoverflow_username: '00000001'
+profile_image: '/assets/profile.jpg'
 dribbble_username: jekyll
 facebook_username: jekyll
 flickr_username: jekyll
