--- a/_test/_config-version-1.yml
+++ b/_test/_config-version-1.yml
@@ -8,6 +8,7 @@ title: Your job title
 email: test@email.com
 phone: 07845248563
 website: sproogen.github.io/modern-resume-theme
+meta_title: Your Name | Your job title
 
 givenName: jekyll
 familyName: jekyll
