--- a/_test/_config-version-2.yml
+++ b/_test/_config-version-2.yml
@@ -14,6 +14,7 @@ phone: 07845248563
 phone_title: Phone
 website: sproogen.github.io/modern-resume-theme
 website_title: Web
+meta_title: Your Name | Your job title
 
 givenName: jekyll
 familyName: jekyll
